# 42_projects

./: .clang-format  .editorconfig  .gitignore  README.md
fillit/: README.md  fillit.h
fillit/srcs/: block_class.c  main.c  map_class.c  open_file.c  parser.c  solver.c  storage_class.c  tetri_class.c
ft_job_control/inc/: data_struct.h  job_control.h
ft_job_control/src/: builtin_ex.c  job_init.c  job_launch.c  job_notify.c  job_schedule.c  job_util.c  main.c  process_exec.c  process_init.c  process_status.c  process_util.c  process_util2.c  shell.c
ft_ls/: README.md
ft_ls/inc/: ft_ls.h
ft_ls/src/: data.c  dirs.c  ft_ls.c  lst.c  node.c  node_swap.c  opts.c  perms.c  print.c  sort.c  utils.c
ft_minishell/inc/: gnl.h  minishell.h
ft_minishell/src/: builtins.c  cd.c  echo.c  env.c  exit.c  gnl.c  main.c  setenv.c  unsetenv.c  utils.c
ft_printf/inc/: ft_printf.h  pf_types.h
ft_printf/src/: ft_printf.c  pf_buffer.c  pf_handle.c  pf_handle_chr.c  pf_handle_hex.c  pf_handle_num.c  pf_handle_oct.c  pf_handle_ptr.c  pf_handle_str.c  pf_handle_uni.c  pf_handle_uns.c  pf_helper.c  pf_parse_conv.c  pf_parse_flag.c  pf_parse_modi.c  pf_parse_numb.c  pf_parser.c  pf_unicod.c
ft_ssl_md5/: .editorconfig  Makefile  test.sh
libft/: Makefile
scop/: CMakeLists.txt  Makefile
scop/inc/: datatypes.h  scop.h
scop/shaders/: fs.glsl  vs.glsl
scop/src/: buffer.c  callbacks.c  callbacks2.c  globals.c  growable.c  matrices.c  matrices2.c  matrices3.c  normals.c  parser.c  parser2.c  quaternions.c  scop.c  shaders.c  texture.c  vectors.c  vectors2.c  window.c
(+107 files in other folders)
